[gd_scene load_steps=17 format=2]

[ext_resource path="res://Build Menu/Assets/BuildMenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Build Menu/BuildMenu.gd" type="Script" id=2]
[ext_resource path="res://Build Menu/Assets/ArtifactButton.png" type="Texture" id=3]
[ext_resource path="res://Build Menu/ArtifactTab.gd" type="Script" id=4]
[ext_resource path="res://Artifact/ArtifactCatalogue.tscn" type="PackedScene" id=5]
[ext_resource path="res://Build Menu/Assets/AdventurerButton.png" type="Texture" id=6]
[ext_resource path="res://Build Menu/AdventurerTab.gd" type="Script" id=7]
[ext_resource path="res://Unit/AdventurerCatalogue/AdventurerCatalogue.tscn" type="PackedScene" id=8]
[ext_resource path="res://Build Menu/Assets/ItemButton.png" type="Texture" id=9]
[ext_resource path="res://Build Menu/ItemTab.gd" type="Script" id=10]
[ext_resource path="res://Item/ItemCatalogue.tscn" type="PackedScene" id=11]
[ext_resource path="res://Build Menu/SelectSlot.tscn" type="PackedScene" id=12]
[ext_resource path="res://Build Menu/Assets/UnitSelectSlot.png" type="Texture" id=13]
[ext_resource path="res://Build Menu/Assets/ItemSelectSlot.png" type="Texture" id=14]
[ext_resource path="res://Fonts/LevelSceneFont.tres" type="DynamicFont" id=15]
[ext_resource path="res://Build Menu/Assets/EmbarkButton.png" type="Texture" id=16]

[node name="Background" type="TextureRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse" ]

[node name="Anchor" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1450.0
margin_top = 50.0
margin_right = 1490.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ArtifactTab" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 580.0
margin_right = 289.0
margin_bottom = 655.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="ArtifactCatalogue" parent="ArtifactTab" index="0" instance=ExtResource( 5 )]

margin_left = -23.0
margin_top = -539.0
margin_right = 277.0
margin_bottom = -19.0

[node name="AdventurerTab" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 535.0
margin_top = 578.0
margin_right = 885.0
margin_bottom = 653.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="AdventurerCatalogue" parent="AdventurerTab" index="0" instance=ExtResource( 8 )]

margin_left = -101.0
margin_top = -528.0
margin_right = 399.0
margin_bottom = -8.0
mouse_filter = 2
_sections_unfolded = [ "Mouse" ]

[node name="ItemTab" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1179.0
margin_top = 581.0
margin_right = 1379.0
margin_bottom = 656.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
script = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[node name="ItemCatalogue" parent="ItemTab" index="0" instance=ExtResource( 11 )]

margin_left = -52.0
margin_top = -526.0
margin_right = 248.0
margin_bottom = -6.0

[node name="Selection" type="Container" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.0
margin_top = 757.0
margin_right = 1470.0
margin_bottom = 1007.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="USS1" parent="Selection" index="0" instance=ExtResource( 12 )]

margin_left = -49.0
margin_top = 5.0
margin_right = 151.0
margin_bottom = 305.0
mouse_filter = 2
texture_normal = ExtResource( 13 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="USS2" parent="Selection" index="1" instance=ExtResource( 12 )]

margin_left = 156.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 304.0
mouse_filter = 1
texture_normal = ExtResource( 13 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="USS3" parent="Selection" index="2" instance=ExtResource( 12 )]

margin_left = 365.0
margin_top = 4.0
margin_right = 565.0
margin_bottom = 304.0
mouse_filter = 1
texture_normal = ExtResource( 13 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="USS4" parent="Selection" index="3" instance=ExtResource( 12 )]

margin_left = 570.0
margin_top = 2.0
margin_right = 770.0
margin_bottom = 302.0
mouse_filter = 1
texture_normal = ExtResource( 13 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="ASS1" parent="Selection" index="4" instance=ExtResource( 12 )]

margin_left = -145.0
margin_top = 85.0
margin_right = -70.0
margin_bottom = 160.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="ASS2" parent="Selection" index="5" instance=ExtResource( 12 )]

margin_left = -147.0
margin_top = 168.0
margin_right = -72.0
margin_bottom = 243.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="ISS1" parent="Selection" index="6" instance=ExtResource( 12 )]

margin_left = 781.0
margin_top = 147.0
margin_right = 856.0
margin_bottom = 222.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="ISS2" parent="Selection" index="7" instance=ExtResource( 12 )]

margin_left = 872.0
margin_top = 147.0
margin_right = 947.0
margin_bottom = 222.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="ISS3" parent="Selection" index="8" instance=ExtResource( 12 )]

margin_left = 961.0
margin_top = 147.0
margin_right = 1036.0
margin_bottom = 222.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="ISS4" parent="Selection" index="9" instance=ExtResource( 12 )]

margin_left = 1049.0
margin_top = 149.0
margin_right = 1124.0
margin_bottom = 224.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="BPCount" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_top = 703.0
margin_right = 147.0
margin_bottom = 738.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
text = "12 BP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Embark" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1562.0
margin_top = 898.0
margin_right = 1812.0
margin_bottom = 973.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="ArtifactTab" to="ArtifactTab" method="_on_ArtifactTab_pressed"]

[connection signal="pressed" from="AdventurerTab" to="AdventurerTab" method="_on_AdventurerTab_pressed"]

[connection signal="pressed" from="ItemTab" to="ItemTab" method="_on_ItemTab_pressed"]

[connection signal="pressed" from="Embark" to="." method="_on_Embark_pressed"]


